<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:weightSum="15">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="انشاء حساب جديد"
        android:textSize="24sp"
        android:paddingTop="20dp"
        android:textColor="@color/colorWhite"

        android:layout_gravity="center"

        />

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_name"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_name"
        android:fontFamily=""
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:drawablePadding="10dp"

         />
    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_mail"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_email"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"

        />

    <EditText
        android:id="@+id/et_register_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_calender"
        android:inputType="datetime"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_birthdate"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"

        />
    <Spinner
        android:id="@+id/et_register_blood_type"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_blood_drop"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_blood_type"
        android:textColorHint="@color/colorDarkRed"

        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"

        />

    <EditText
        android:id="@+id/et_register_last_donation_date"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:inputType="datetime"
        android:drawableRight="@drawable/ic_calender"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_last_donation_date"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        />
    <Spinner
        android:id="@+id/et_govern_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_city"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_goverment"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        />

    <Spinner
        android:id="@+id/et_city_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_city"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_city"
        android:spinnerMode="dropdown"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/et_phone_num_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="phone"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_phone"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_phone_number"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/et_password_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_password"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_password"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        />
    <EditText
        android:id="@+id/et_confirm_password_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableRight="@drawable/ic_password"
        android:inputType="textPassword"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:hint="@string/tx_confirm_password"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        />

    <Button
        android:id="@+id/btn_register_first"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"

        android:background="@drawable/button_round"
        android:backgroundTint="#423D3D"
        android:gravity="center"
        android:hint="@string/tx_register"
        android:textColorHint="@color/colorDarkRed"


        android:textSize="24sp" />
</LinearLayout>