<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorDarkRed">
<androidx.appcompat.widget.Toolbar
    android:id="@+id/tool_bar_edit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
      android:layout_alignBottom="@+id/tool_bar_edit"
        android:layout_alignParentTop="true"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:gravity="center"

        />
</RelativeLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_edit_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:inputType="textPersonName"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_name"
        android:drawableTint="@color/colorDarkRed"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/tx_name"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:drawablePadding="10dp"
        android:layout_marginTop="20dp"
        android:drawableTintMode="src_atop"

        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_edit_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="textEmailAddress"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_mail"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_email"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:drawableTintMode="src_atop"
        />

    <TextView
        android:id="@+id/edit_profile_fragment_tv_birth_date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_calender"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_birthdate"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />
    <Spinner
        android:id="@+id/spinner_edit_blood_type"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_blood_drop"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_blood_type"
        android:textColorHint="@color/colorDarkRed"

        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <TextView
        android:id="@+id/edit_profile_fragment_tv_last_donation_date"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_calender"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_last_donation_date"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />
    <Spinner
        android:id="@+id/spinner_govern_edit_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_city"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_goverment"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <Spinner
        android:id="@+id/spinner_city_edit_fragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_city"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_city"
        android:spinnerMode="dropdown"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="start|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_phone_num_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="phone"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_phone"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_phone_number"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="end|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_password_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_password"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_password"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="end|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_confirm_password_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:drawableEnd="@drawable/ic_password"
        android:inputType="textPassword"
        android:drawableTint="@color/colorDarkRed"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:hint="@string/tx_confirm_password"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="24sp"
        android:gravity="end|center"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />

    <Button
        android:id="@+id/btn_edit_first"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/colorDarkRed"
        android:gravity="center"
        android:hint="@string/edit"
        android:textColorHint="@color/colorWhite"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textSize="24sp" />


</LinearLayout>