<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@drawable/login"
    android:weightSum="4"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:paddingLeft="70dp"
        android:paddingRight="50dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/blood_drop_login"></androidx.appcompat.widget.AppCompatImageView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tx_verfication_code"
        android:gravity="start|center"
        android:textColorHint="@color/colorDarkRed"
        android:background="@drawable/button_round"
        android:textSize="25sp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tx_new_password"
        android:gravity="start|center"
        android:textColorHint="@color/colorDarkRed"
        android:background="@drawable/button_round"
        android:textSize="25sp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tx_confirm_new_password"
        android:gravity="start|center"
        android:textColorHint="@color/colorDarkRed"
        android:background="@drawable/button_round"
        android:textSize="25sp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tx_change"
        android:gravity="center"
        android:textColorHint="@color/colorDarkRed"
        android:background="@drawable/button_round"
        android:backgroundTint="@color/colorGrey"
        android:backgroundTintMode="src_over"
        android:textSize="25sp"
        android:paddingRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"/>


</LinearLayout>