<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    android:weightSum="11"

    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="6"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:src="@drawable/blood_drop_login"></androidx.appcompat.widget.AppCompatImageView>

    <EditText
        android:id="@+id/et_login_mobile_phone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:inputType="phone"
        android:background="@drawable/button_round"
        android:gravity="end|center"
        android:hint="@string/tx_mobile"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp"
        android:maxLines="1"
        />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:inputType="textPassword"
        android:background="@drawable/button_round"
        android:gravity="end|center"
        android:hint="@string/tx_password"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="20sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        >


        <Button
            android:id="@+id/img_btn_forget_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="?android:attr/selectableItemBackground"
            android:gravity="top"

            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:text="هل نسيت كلمه المرور"
            android:textSize="24sp"
            android:textColor="@color/colorWhite"
            />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:id="@+id/chk_remember_me_login"
        android:layout_toLeftOf="@+id/tv_remember_me_login"
            android:layout_alignParentTop="true"
            />

        <TextView
            android:id="@+id/tv_remember_me_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="1dp"
            android:foregroundGravity="center"
            android:paddingEnd="20dp"
            android:paddingStart="10dp"
            android:textSize="24sp"
            android:text="تذكرني"
           />


    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".75"
        android:background="@drawable/button_round"
        android:hint="@string/tx_login"
        android:textColorHint="@color/colorDarkRed"
        android:textSize="30sp"/>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1.25"


    >

    <Button
        android:id="@+id/btn_have_acc_"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorWhite"
        android:text="@string/tx_do_not_have_acc"
        android:textColor="@color/colorDarkRed" />
</RelativeLayout>
</LinearLayout>